--- a/README.adoc
+++ b/README.adoc
@@ -14,6 +14,15 @@ This section shows how to add new projects to this repository.
 
 === Java Project
 
+=== Python Project
+
 === Go Project
 
-=== Python Project
+== Update third_party
+
+[source,bash]
+----
+grep "name = " copy.bara.sky \
+  | awk '{print substr($3,2,length($3) - 3)}' \
+  | xargs -I@ copybara migrate copy.bara.sky @ --ignore-noop --folder-dir=.
+----
