--- a/nail/PORTING.adoc
+++ b/nail/PORTING.adoc
@@ -1,3 +1,7 @@
 = Nail
 
 Ported from link:https://github.com/hcoona/nail/tree/73df7fb44044b5adebdfde3997f6702bc6473db5[https://github.com/hcoona/nail/tree/73df7fb44044b5adebdfde3997f6702bc6473db5].
+
+== Modifications
+
+. Remove casting with `typeof`.
